--- a/bingo.html
+++ b/bingo.html
@@ -163,7 +163,7 @@
                 for (var x = 0; x < N; x++) {
                     var id = 'cell_' + x + '_' + y;
                     var c = document.getElementById("chk-" + id);
-                    save("bingo." + id + "_" + person, c.checked);
+                    save("bingo." + id, c.checked);
                 }
             }
         }
