--- a/bingo.html
+++ b/bingo.html
@@ -70,7 +70,7 @@
                     html += '<td id="cell_' + x + '_' + y + '" >' +
                         '<span id="chk-cell_' + x + '_' + y + '" onclick="cellClicked(\'cell_' + x + '_' + y + "')\"> <i class=\"fas fa-dice\"></i></span>" +
                         "\t" + obj.song + " - " + obj.artist +
-                        "<br>" + '<span onClick="openPlayer("cell_' + x + '_' + y + '")"><i class="fab fa-youtube"></i></span>' + "\t" + obj.quote + "</td>";
+                        "<br>" + '<span onClick="openPlayer(\'cell_' + x + '_' + y + "')\"><i class=\"fab fa-youtube\"></i></span>" + "\t" + obj.quote + "</td>";
                 }
                 html += "</tr>"
             }
