--- a/prize.html
+++ b/prize.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>Birthday Bingo</title>
+    <title>Happy Birthday!</title>
     <link rel="stylesheet" type="text/css" href="bingo.css">
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>Birthday Bingo</h1>
+    <h1>Happy Birthday!</h1>
 
     <noscript>
     <div class="error">
@@ -22,12 +22,7 @@
     </div>
     </noscript>
 
-    <p>
-        <br> It seems to be your birthday today, and your friends have put together a little game to virtually spend time celebrating you on your <strong>quarantine birthday</strong>
-    </p>
-    <div>
-        <a href="bingo.html">PLAY BINGO!</a>
-    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/AoAm4om0wTs" frameborder="5" allow="accelerometer; autoplay=1; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 </html>
