--- a/prize.html
+++ b/prize.html
@@ -22,7 +22,7 @@
     </div>
     </noscript>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/AoAm4om0wTs" frameborder="5" allow="accelerometer; autoplay=1; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://drive.google.com/file/d/1l__2kb2wuf-ow7LPkuCA4Wr22yH112lj/preview" width="640" height="480"></iframe>
 </body>
 
 </html>
