moved data to a folder

--- a/bingo.html
+++ b/bingo.html
@@ -16,7 +16,7 @@
 
     <!-- css -->
     <link rel="stylesheet" type="text/css" href="bingo.css">
-    <script src="songs.txt"></script>
+    <script src="data/songs.txt"></script>
 
     <!-- Disable right click http://www.spacegun.co.uk -->
     <script language=JavaScript>
