--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
 
 <head>
     <title>Birthday Bingo</title>
-    <link rel="stylesheet" type="text/css" href="bingo.css">
+
+    <script src="data/songs.txt" id="data-file"></script>
+
+    <link rel="stylesheet" type="text/css" href="" id="insert-style">
+    <script type="text/javascript">
+        document.getElementById("insert-style").href = style_file;
+        console.log("Put style file");
+    </script>
+
     <link href='https://fonts.googleapis.com/css?family=Playfair+Display' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=DM+Mono' rel='stylesheet'>
     <link rel="icon" href="https://img.icons8.com/flat_round/64/000000/whale--v1.png">
